[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/Enemy/Robots.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Droid.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Droid_Laser.gd" type="Script" id=4]
[ext_resource path="res://Music/Enemy death sounds/Horror-Hit.ogg" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.79121, 10 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 132, 24, 33 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 24, 132, 24, 33 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 132, 24, 33 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 72, 132, 24, 33 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 132, 24, 33 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 120, 132, 24, 33 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 132, 24, 33 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 168, 132, 24, 33 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 8.41324, 8.54267 )

[node name="KinematicBody2D" type="KinematicBody2D"]
position = Vector2( 0.187286, 0.561865 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 16
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="FloorChecker" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.0342437, -1.53245 )
frames = SubResource( 10 )
animation = "run"
frame = 2
playing = true

[node name="SidesChecker" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 33
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SoundSquash" type="AudioStreamPlayer" parent="."]
volume_db = -20.0

[node name="BotDieing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[connection signal="body_entered" from="SidesChecker" to="SidesChecker" method="_on_SidesChecker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_SidesChecker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
